Thu Mar  1 08:51:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.{cpp,inl}:
          Introduced new ACE_HAS_VSWPRINTF that we can set when a platform
          has this method

        * ace/config-hpux-11.00.h:
          Added ACE_HAS_VSWPRINTF

Wed Feb 28 21:34:45 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added two new TAO tests.

Wed Feb 28 19:16:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * ace/DLL_Manager.cpp:
        * ace/Parse_Node.cpp:
          Fixed pointer conversion warnings on OpenVMS.

Wed Feb 28 17:44:20 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Truncate.h (Truncator):

          Fixed typo in the ACE_LACKS_UNSIGNEDLONGLONG_T case.
          s/ACE_UIN32/ACE_UINT32/.

Wed Feb 28 13:32:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-hpux-11.00.h:
          Moved ACE_HAS_SSIZE_T outside of the compiler specific part, gcc
          and aCC do have ssize_t. Also moved ACE_HAS_XPG4_MULTIBYTE_CHAR
          outside of the compiler part.

Wed Feb 28 11:09:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp (num_processors):
          Implemented for HPUX

Wed Feb 28 09:58:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ADDIDL.DSM:
          Moved to TAO

        * bin/msvc_cidlc.pl:
          Moved to CIAO

        * indent_macros.perl:
        * indent_macros.pl:
          Renamed extension to .pl

Wed Feb 28 09:44:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/corba-boolean.perl:
        * bin/rm_exception_macros.pl:
        * bin/subst_env.pl:
        * bin/tao_env.pl:
        * bin/tao_svcconf.pl:
          Moved to TAO/bin, no need to ship these with ACE

Wed Feb 28 08:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL_Manager.cpp: