@@ -1,3 +1,9 @@
+Thu Mar 1 9:42:12 UTC 2007  Martin Corino  <mcorino@remedy.nl>
+
+        * bin/PerlACE/Process_Unix.pm:
+        * bin/PerlACE/ProcessVX_Unix.pm:
+          Some fixes for running VxWorks 6.x RTP tests.
+
 Thu Mar  1 08:51:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_stdio.{cpp,inl}:
